--- a/Assignment7/Part3.html
+++ b/Assignment7/Part3.html
@@ -11,11 +11,11 @@
 
 	<form name = "myForm">
 		<div class = "Infomationable">
-			<p id = "First" onclick = "LoadFirst();">1.HTTP</p>
-			<p id = "Second" onclick = "LoadSecond();">2.CAPTCHA</p>
-			<p id = "Third" onclick = "LoadThird();">3.RAM</p>
-			<p id = "Fourth" onclick = "LoadFourth();">4.SPYWARE</p>
-			<p id = "Fifth" onclick = "LoadFifth();">5.TYPEWRITER</p>
+			<p id = "Arrow" onclick = "LoadArrow();">1.Arrow</p>
+			<p id = "Criminal Minds" onclick = "LoadCriminalMinds();">2.Criminal Minds</p>
+			<p id = "The Flash" onclick = "LoadTheFlash();">3.The Flash</p>
+			<p id = "Inhumans" onclick = "LoadInhumans();">4.Inhumans</p>
+			<p id = "The Gifted" onclick = "LoadTheGifted();">5.The Gifted</p>
 		</div>
 	</form>
 
