--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -186,6 +186,14 @@
 				<td>
 					<a href="http://codd.cs.gsu.edu/~ztajani1/Assignment5InClassQuiz3/quiz.html"> Assignment 5 JavaScript In-Class Quiz 3 </a>
 			</tr>
+				<tr>
+				<td>Assignment 7</td>
+				<td> 
+					<a href="http://codd.cs.gsu.edu/~ztajani1/Assignment7/Part1.html"> Part I </a>
+					<a href="http://codd.cs.gsu.edu/~ztajani1/Assignment7/Part2.html"> Part II </a>  
+					<a href="http://codd.cs.gsu.edu/~ztajani1/Assignment7/Part3.html"> Part III </a>  					
+				</td> 
+			</tr>
 	</table>
 
 
