--- a/Assignment7/Part1.html
+++ b/Assignment7/Part1.html
@@ -22,7 +22,7 @@
 <br>
 
     <h3>Wire Transfer:</h3><br>
-    <button>Buy!</button>
+    <button>Wire Transfer!</button>
 
       <p>Click the Button above to Transfer Money!</p>
 
