fjkldsa;jfkdsa;jfm

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -198,6 +198,19 @@
 				<td>Project 3</td>
 				<td>
 					<a href="http://codd.cs.gsu.edu/~ztajani1/Project3/index.html"> Conway's Game Of Life </a>
+				</td>
+			</tr>
+			<tr>
+				<td>Assingnment 8</td>
+				<td>
+					<a href = ""> ??? </a>
+				</td>
+			</tr>
+			<tr>
+				<td>Final/Project 4</td>
+				<td>
+					<a href=""> Online Virtual Agent </a>
+				</td>
 			</tr>
 	</table>
 
