--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -203,13 +203,13 @@
 			<tr>
 				<td>Assingnment 8</td>
 				<td>
-					<a href = ""> ??? </a>
+					<a href = "http://codd.cs.gsu.edu/~ztajani1/Assignment8/createTables.php"> PHP/SQL Assignment </a>
 				</td>
 			</tr>
 			<tr>
 				<td>Final/Project 4</td>
 				<td>
-					<a href=""> Online Virtual Agent </a>
+					<a href="http://codd.cs.gsu.edu/~ztajani1/Project4/index.html"> Online Virtual Agent </a>
 				</td>
 			</tr>
 	</table>
